gallery/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insight-gallery
  labels:
    app: insight-gallery
spec:
  type: ClusterIP
  selector:
    app: insight-gallery
  ports:
    - name: http
      port: 8501
      targetPort: http
